<resources>
    <string name="app_name">module-auth-hospital</string>
    <!--全局-->
    <string name="company_name">杭州国辰迈联机器人科技有限公司</string>
    <string name="coming_soon_tips">敬请期待</string>
    <string name="common_back_title">返回</string>
    <string name="common_next">下一步</string>
    <string name="common_confirm">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_complete">完成</string>

    <!--提示-->
    <string name="loign_load_tips">加载中</string>
    <string name="loign_register_tips">注册中</string>
    <string name="loign_register_sucess_tips">注册成功</string>

    <!--医生登陆-->
    <string name="loign_doctor_account_tips">请输入您的医生账号</string>
    <string name="loign_doctor_password_tips">请输入您的密码</string>
    <string name="loign_doctor_login">登录</string>
    <string name="loign_doctor_change_account">切换登录方式</string>
    <string name="has_no_account_tips">没有账号?</string>
    <string name="sign_up_tips">立即注册</string>

    <!--用户登录-->
    <string name="loign_user_logins_title">用 户 登 录</string>
    <string name="loign_user_login_scan_idcard">身份证扫描</string>
    <string name="loign_user_login_idcard_numer">身份证号</string>
    <string name="loign_user_login_face">人脸识别</string>
    <string name="loign_user_login_city_card">市民卡</string>

    <!--身份证扫描登录-->
    <string name="loign_login_scan_titl">身 份 证 扫 描 登 录</string>
    <string name="loign_login_scan_tips">请把身份证放在身份证阅读器上</string>

    <string name="loign_login_scan_tip01">请刷身份证</string>
    <string name="loign_login_scan_tip02">找不到设备</string>
    <string name="loign_login_scan_tip03">读取成功</string>

    <string name="loign_login_logining_tips">登陆中</string>
    <string name="loign_login_sucess_tips">登录成功</string>


    <!--身份证号登录-->
    <string name="loign_login_id_number_title">身 份 证 扫 描 登 录</string>
    <string name="loign_login_id_number_tips">身份证号码登录</string>
    <string name="loign_id_number_input_tips">请输入您的身份证号</string>
    <string name="loign_id_number_confirm_tips">请输入正确的身份证号</string>


    <!--用户注册-->
    <string name="loign_register_registers_title">居 民 注 册</string>

    <!--身份证扫描注册-->
    <string name="loign_register_scan_titl">身 份 证 扫 描 注 册</string>
    <string name="loign_register_has_registed_tips">身份证已注册，是否直接登录？</string>

    <!--身份证号码注册-->
    <string name="loign_register_id_number_titl">身 份 证 号 码 注 册</string>
    <string name="loign_register_id_number_tips">身份证号码注册</string>

    <!--人脸注册-->
    <string name="loign_register_face_tips">人脸注册失败</string>


    <!--注册信息-->
    <string name="loign_register_name_tips">姓名</string>
    <string name="loign_register_nation_tips">民族</string>
    <string name="loign_register_sex_tips">性别</string>
    <string name="loign_register_sex_man_tips">男</string>
    <string name="loign_register_sex_woman_tips">女</string>
    <string name="loign_register_ID_number_tips">身份证号码</string>
    <string name="loign_register_address01_tips">户籍地址</string>
    <string name="loign_register_address02_tips">详细地址</string>


    <string name="loign_register_enter_name_tips">请输入姓名</string>
    <string name="loign_register_enter_nation_tips">请输入民族</string>
    <string name="loign_register_enter_address_tips">请输入地址</string>
    <string name="loign_register_enter_better_address_tips">请输入详细地址</string>

    <!--注册成功-->
    <string name="loign_register_successs_jumps_tips">3秒后自动跳转到预诊建档界面</string>


    <string name="dialog_unbind_device_and_reconnet">您确定解绑之前的设备，重新连接新设备吗？</string>
    <string name="dialog_button_ok">确定</string>
    <string name="dialog_button_cancel">取消</string>
</resources>
