<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.gcml.common.widget.toolbar.TranslucentToolBar
        android:id="@+id/auth_register_info_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60pt"
        android:orientation="horizontal"
        android:paddingLeft="60pt">

        <TextView
            android:id="@+id/tv_register_name"
            android:layout_width="860pt"
            android:layout_height="wrap_content"
            android:text="@string/loign_register_name_tips"
            android:textColor="#ff333333"
            android:textSize="56pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_register_minzu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1000pt"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/tv_register_name"
            android:text="@string/loign_register_nation_tips"
            android:textColor="#ff333333"
            android:textSize="56pt"
            android:textStyle="bold" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120pt"
        android:layout_marginTop="30pt"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="60pt">

        <TextView
            android:paddingLeft="15pt"
            android:id="@+id/et_register_name"
            android:layout_width="860pt"
            android:layout_height="120pt"
            android:layout_marginStart="8pt"
            android:background="@drawable/common_bg_input_gray"
            android:gravity="center_vertical"
            android:hint="@string/loign_register_enter_name_tips"
            android:inputType="text"
            android:textColor="#ff333333"
            android:textColorHint="#ffbbbbbb"
            android:textSize="48pt" />

        <TextView
            android:paddingLeft="15pt"
            android:id="@+id/et_register_minzu"
            android:layout_width="860pt"
            android:layout_height="120pt"
            android:layout_marginLeft="1000pt"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/et_register_name"
            android:background="@drawable/common_bg_input_gray"
            android:gravity="center_vertical"
            android:hint="@string/loign_register_enter_nation_tips"
            android:textColor="#ff333333"
            android:textColorHint="#ffbbbbbb"
            android:textSize="48pt" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40pt"
        android:orientation="horizontal"
        android:paddingLeft="60pt">

        <TextView
            android:id="@+id/textView6tv_register_sex"
            android:layout_width="860pt"
            android:layout_height="wrap_content"
            android:text="@string/loign_register_sex_tips"
            android:textColor="#ff333333"
            android:textSize="56pt"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_register_idcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1000pt"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView6tv_register_sex"
            android:text="@string/loign_register_ID_number_tips"
            android:textColor="#ff333333"
            android:textSize="56pt"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120pt"
        android:layout_marginTop="60pt"
        android:orientation="horizontal"
        android:paddingLeft="60pt">

        <LinearLayout
            android:id="@+id/ll_sex"
            android:layout_width="860pt"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/auth_tv_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_not_select"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/loign_register_sex_man_tips"
                android:textColor="#ff333333"
                android:textSize="56pt" />

            <TextView
                android:id="@+id/auth_tv_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180pt"
                android:drawableLeft="@drawable/ic_select"
                android:drawablePadding="24pt"
                android:gravity="center"
                android:text="@string/loign_register_sex_woman_tips"
                android:textColor="#ff333333"
                android:textSize="56pt" />


        </LinearLayout>

        <TextView
            android:paddingLeft="15pt"
            android:id="@+id/et_register_idcrad"
            android:layout_width="860pt"
            android:layout_height="120pt"
            android:layout_marginLeft="1000pt"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/ll_sex"
            android:background="@drawable/common_bg_input_gray"
            android:digits="0123456789xyzXYZ"
            android:gravity="center_vertical"
            android:hint="@string/loign_id_number_input_tips"
            android:inputType="number"
            android:textColor="#ff333333"
            android:textColorHint="#ffbbbbbb"
            android:textSize="48pt" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60pt"
        android:orientation="horizontal"
        android:paddingLeft="60pt">

        <TextView
            android:id="@+id/tv_register_now_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8pt"
            android:text="@string/loign_register_address01_tips"
            android:textColor="#ff333333"
            android:textSize="56pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_register_detail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1000pt"
            android:text="@string/loign_register_address02_tips"
            android:textColor="#ff333333"
            android:textSize="56pt"
            android:visibility="gone" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30pt"
        android:orientation="horizontal"
        android:paddingLeft="60pt">

        <TextView
            android:paddingLeft="15pt"
            android:id="@+id/et_register_now_address"
            android:layout_width="1800pt"
            android:layout_height="120pt"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/common_bg_input_gray"
            android:gravity="center_vertical"
            android:hint="@string/loign_register_enter_address_tips"
            android:inputType="text"
            android:textColor="#ff333333"
            android:textColorHint="#ffbbbbbb"
            android:textSize="48pt" />

        <TextView
            android:id="@+id/et_register_detail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1000pt"
            android:background="@null"
            android:hint="@string/loign_register_enter_better_address_tips"
            android:inputType="text"
            android:padding="32pt"
            android:textColor="#ff333333"
            android:textColorHint="#ffbbbbbb"
            android:textSize="48pt"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_auth_next"
        android:layout_width="320pt"
        android:layout_height="100pt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50pt"
        android:background="@drawable/shape_rectangle_next_btn"
        android:gravity="center"
        android:text="@string/common_next"
        android:textColor="#ffffffff"
        android:textSize="56pt" />

</LinearLayout>